refactor(): 0716 club merge 전  Code 정리  YY